--- a/templates/base.html
+++ b/templates/base.html
@@ -28,8 +28,7 @@
 
 	{% block corejs %}
 	<!--Import jQuery before materialize.js-->
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<!-- Compiled and minified JavaScript for Materialize -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 	<script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
@@ -55,9 +54,54 @@
                 <ul id="nav-mobile" class="side-nav">
                     <li><a href="#">Navbar Link</a></li>
                 </ul>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="#">Navbar Link</a></li>
-                </ul>			
+                <div class="right hide-on-med-and-down row">
+                    <div class="col s4">
+                        <!-- Dropdown Trigger -->
+                        <ul>
+                            <li><a class='dropdown-button' data-beloworigin="true" href='#' data-activates='dropdown1'>Search</a></li>
+                        </ul>
+                        <!-- Dropdown Structure -->
+                        <ul id='dropdown1' class='dropdown-content'>
+                            <li><a href="#!">one</a></li>
+                            <li><a href="#!">two</a></li>
+                            <li class="divider" tabindex="-1"></li>
+                            <li><a href="#!">three</a></li>
+                            <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+                            <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+                        </ul>
+                    </div>
+                    <div class="col s4">
+                        <!-- Dropdown Trigger -->
+                        <ul>
+                            <li><a class='dropdown-button' data-beloworigin="true" href='#' data-activates='dropdown1'>Account</a></li>
+                        </ul>
+                        <!-- Dropdown Structure -->
+                        <ul id='dropdown1' class='dropdown-content'>
+                            <li><a href="#!">one</a></li>
+                            <li><a href="#!">two</a></li>
+                            <li class="divider" tabindex="-1"></li>
+                            <li><a href="#!">three</a></li>
+                            <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+                            <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+                        </ul>
+                    </div>
+                    <div class="col s4">
+                        <!-- Dropdown Trigger -->
+                        <ul>
+                            <li><a class='dropdown-button' data-beloworigin="true" href='#' data-activates='dropdown1'>Cart</a></li>
+                        </ul>
+                        <!-- Dropdown Structure -->
+                        <ul id='dropdown1' class='dropdown-content'>
+                            <li><a href="#!">one</a></li>
+                            <li><a href="#!">two</a></li>
+                            <li class="divider" tabindex="-1"></li>
+                            <li><a href="#!">three</a></li>
+                            <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+                            <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+                        </ul>
+                    </div>
+                </div>
+                		
                 <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
             </div>
         </nav>
@@ -115,6 +159,17 @@
         $('.button-collapse').sideNav();
         $('.parallax').parallax();
     });
+    $('.dropdown-button').dropdown({
+      inDuration: 300,
+      outDuration: 225,
+      constrainWidth: false, // Does not change width of dropdown to that of the activator
+      hover: true, // Activate on hover
+      gutter: 0, // Spacing from edge
+      belowOrigin: false, // Displays dropdown below the button
+      alignment: 'left', // Displays dropdown with edge aligned to the left of button
+      stopPropagation: false // Stops event propagation
+    }
+  );
 </script>
 {% endblock %}
 
