removed template images, added new background image to slider in index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,6 +12,38 @@
 {% endblock %}
 
 {% block content %}
+    <div class="slider">
+        <ul class="slides">
+            <li>
+                <img src="{{ MEDIA_URL }}background4.jpg"> <!-- random image -->
+                <div class="caption center-align">
+                    <h3>This is our big Tagline!</h3>
+                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                </div>
+            </li>
+            <li>
+                <img src="{{ MEDIA_URL }}background5.jpg"> <!-- random image -->
+                <div class="caption left-align">
+                    <h3>Left Aligned Caption</h3>
+                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                </div>
+            </li>
+            <li>
+                <img src="{{ MEDIA_URL }}background6.jpg"> <!-- random image -->
+                <div class="caption right-align">
+                    <h3>Right Aligned Caption</h3>
+                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                </div>
+            </li>
+            <li>
+                <img src="{{ MEDIA_URL }}background7.jpg"> <!-- random image -->
+                <div class="caption center-align">
+                    <h3>This is our big Tagline!</h3>
+                    <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                </div>
+            </li>
+        </ul>
+    </div>
     <div class="container">
 		<div class="section">
 			<!--   Icon Section   -->
@@ -117,5 +149,8 @@
 {% block postloadjs %}
     {{ block.super }}
     <script type="text/javascript">
+        $(document).ready(function(){
+            $('.slider').slider();
+        });
 	</script>
 {% endblock %}
