added extented navbar for buttons of different pages, new images for home section with buy now button

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,7 @@
     <div class="slider">
         <ul class="slides">
             <li>
-                <img src="{{ MEDIA_URL }}background4.jpg"> <!-- random image -->
+                <img src="{{ MEDIA_URL }}background8.jpg"> <!-- random image -->
                 <div class="caption center-align">
                     <h3>This is our big Tagline!</h3>
                     <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -29,14 +29,14 @@
                 </div>
             </li>
             <li>
-                <img src="{{ MEDIA_URL }}background6.jpg"> <!-- random image -->
+                <img src="{{ MEDIA_URL }}background9.jpg"> <!-- random image -->
                 <div class="caption right-align">
                     <h3>Right Aligned Caption</h3>
                     <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
                 </div>
             </li>
             <li>
-                <img src="{{ MEDIA_URL }}background7.jpg"> <!-- random image -->
+                <img src="{{ MEDIA_URL }}background10.jpg"> <!-- random image -->
                 <div class="caption center-align">
                     <h3>This is our big Tagline!</h3>
                     <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -44,6 +44,7 @@
             </li>
         </ul>
     </div>
+    <a class="btn-floating btn waves-effect waves-light deep-purple darken-3">Buy Now</a>
     <div class="container">
 		<div class="section">
 			<!--   Icon Section   -->
