--- a/static/css/base.css
+++ b/static/css/base.css
@@ -27,15 +27,28 @@ p {
     margin-bottom: 0px;
 }
 
+#navbar-background {
+        background: url('/media/nav_background.jpeg') no-repeat right fixed;
+        background-size: cover;
+}
+
 nav {
     height: 200px;
     padding-top: 10px;
-    background-color: #11bcd4;
+    background-color: rgba(0, 0, 0, 0.0)
+}
+
+#content-navbar, #content-nav-mobile {
+    padding: 20px 0px;
 }
 
 #content-navbar {
-    padding: 20px 0px;
-    background-color: #d31245;
+        background-color: rgba(211, 18, 69, 0.7)
+}
+
+#mobile-button-collapse {
+    font-size: 40px;
+    color: #fafafa; 
 }
 
 .nav-content .btn {
@@ -44,6 +57,11 @@ nav {
     padding: 0;
     height: 30px;
     line-height: 30px;
+}
+
+.side-nav li > a.btn {
+    margin: 20px 15px;
+    font-size: 20px;
 }
 
 nav ul a {
@@ -109,7 +127,7 @@ nav ul a {
   font-size: inherit;
 }
 .slider h3, .slider h5 {
-    text-shadow: 2px 2px 4px #000000;
+    text-shadow: 2px 2px 5px #000000;
 }
 .slider .indicators .indicator-item.active {
     background-color: #26a69a;
@@ -135,7 +153,7 @@ footer.page-footer {
     nav {
         height: 400px;
         padding-top: 20px;
-        background-color: rgba(38, 198, 218, 0.0)
+        background-color: rgba(0, 0, 0, 0.0)
     }
     #navbar-background {
         background: url('/media/nav_background.jpeg') no-repeat center fixed;
@@ -148,8 +166,8 @@ footer.page-footer {
         transform: translateX(-50%);
         width: 80%
     }
-    #content-navbar {
-        background-color: rgba(211, 18, 69, 0.7)
+    #mobile-button-collapse {
+        color: #444; 
     }
     .parallax-container .section {
         position: absolute;
