--- a/static/css/base.css
+++ b/static/css/base.css
@@ -21,6 +21,14 @@ p {
     font-family: 'Ubuntu', sans-serif;
 }
 
+.stuck {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 10;
+}
+
 /* ---------- Navbar ------------ */
 
 #delivery-top-banner {
@@ -48,7 +56,17 @@ nav {
 
 #mobile-button-collapse {
     font-size: 40px;
-    color: #fafafa; 
+    color: #fafafa;
+}
+
+.mobile-top-header a {
+    color: #fafafa;
+    padding: 5px 5px;
+    font-size: 1.5rem; 
+}
+
+.mobile-top-header a i {
+    margin:0px 5px;
 }
 
 .nav-content .btn {
@@ -168,6 +186,10 @@ footer.page-footer {
     }
     #mobile-button-collapse {
         color: #444; 
+    }
+    .mobile-top-header a {
+        padding: 5px 10px;
+        font-size: 1.7rem; 
     }
     .parallax-container .section {
         position: absolute;
