--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                 <div class="nav-wrapper container">
                     <div class="navbar-links-container row">
                         <a id="logo-link" href="{% url 'home' %}" class="brand-logo">Logo Name</a>
-                        <!-- Desktop Link Bar -->
+                        <!-- Desktop Top Header Bar -->
                         <ul class="right hide-on-med-and-down">
                             <li><a><i class="material-icons left">search</i>Search</a></li>
                             <li><a class='dropdown-button' href='#' data-activates='dropdown_account'><i class="material-icons left">local_cafe</i>Account</a></li>
@@ -102,6 +102,7 @@
                     <a class="waves-effect waves-light orange accent-2 black-text btn">About</a>
                     <a class="waves-effect waves-light red btn">Contact</a>
                 </div>
+                {% include 'includes/mobile_top_header.html' %}
             </div>
         </div>
     </header>    
@@ -151,10 +152,6 @@
 
 {% block postloadjs %}
 <script type="text/javascript">
-    $(document).ready(function(){
-        $('.button-collapse').sideNav();
-        $('.parallax').parallax();
-    });
     $('.dropdown-button').dropdown({
       inDuration: 300,
       outDuration: 225,
@@ -164,8 +161,24 @@
       belowOrigin: true, // Displays dropdown below the button
       alignment: 'left', // Displays dropdown with edge aligned to the left of button
       stopPropagation: false // Stops event propagation
+    });
+
+    function stickyContentNavbar() {
+        var content_navbar = document.getElementById("content-navbar");
+        var sticky = content_navbar.offsetTop;
+        if (window.pageYOffset > sticky) {
+            content_navbar.classList.add("stuck");
+        } else {
+            content_navbar.classList.remove("stuck");
+        }
     }
-  );
+
+    $(document).ready(function(){
+        $('.button-collapse').sideNav();
+        $('.parallax').parallax();
+        window.onscroll = function() {stickyContentNavbar()};
+
+    });
 </script>
 {% endblock %}
 
