--- a/templates/includes/mobile_top_header.html
+++ b/templates/includes/mobile_top_header.html
@@ -1,6 +1,6 @@
 <!-- Mobile Top Header Bar -->
 <div id="mobile-top-header" data-target="red" class="mobile-top-header hide-on-large-only">
-    <a class="waves-effect waves-light modal-trigger"><i class="material-icons">search</i>Search</a>
+    <a class="waves-effect waves-light modal-trigger" href="#search-bar-modal"><i class="material-icons">search</i>Search</a>
     <a class='waves-effect waves-light dropdown-button' href='#' data-activates='mobile-dropdown-account'><i class="material-icons">local_cafe</i>Account</a>
     <a class="waves-effect waves-light"><i class="material-icons">shopping_cart</i>Cart</a>
 </div>
