--- a/templates/base.html
+++ b/templates/base.html
@@ -55,9 +55,9 @@
                         <a id="logo-link" href="{% url 'home' %}" class="brand-logo">Logo Name</a>
                         <!-- Desktop Top Header Bar -->
                         <ul class="right hide-on-med-and-down">
-                            <li><a><i class="material-icons left">search</i>Search</a></li>
-                            <li><a class='dropdown-button' href='#' data-activates='dropdown_account'><i class="material-icons left">local_cafe</i>Account</a></li>
-                            <li><a><i class="material-icons left">shopping_cart</i>Cart</a></li>
+                            <li><a class="waves-effect modal-trigger" href="#search-bar-modal"><i class="material-icons left">search</i>Search</a></li>
+                            <li><a class="waves-effect dropdown-button" href='#' data-activates="dropdown_account"><i class="material-icons left">local_cafe</i>Account</a></li>
+                            <li><a class="waves-effect"><i class="material-icons left">shopping_cart</i>Cart</a></li>
                         </ul>
                         <!-- Mobile Content Pages Navbar Navbar -->
                         <a href="#" data-activates="content-nav-mobile" class="button-collapse"><i id="mobile-button-collapse" class="material-icons">menu</i></a>
@@ -147,6 +147,23 @@
         </div>
     </footer>
 
+    <!-- Search Modal Structure -->
+    <div id="search-bar-modal" class="modal">
+        <div class="modal-content">
+            <nav>
+                <div class="nav-wrapper">
+                    <form>
+                        <div class="input-field">
+                            <input id="search" type="search" required>
+                            <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                            <i class="material-icons modal-close">close</i>
+                        </div>
+                    </form>
+                </div>
+            </nav>
+        </div>
+    </div>
+
 {% if messages %}
 {% endif %}
 
@@ -176,8 +193,8 @@
     $(document).ready(function(){
         $('.button-collapse').sideNav();
         $('.parallax').parallax();
+        $('.modal').modal();
         window.onscroll = function() {stickyContentNavbar()};
-
     });
 </script>
 {% endblock %}
